fix bug with visibility of parallax div too

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -134,6 +134,8 @@
 }
 
 #parallax {
+  visibility: hidden;
+  opacity: 0;
   z-index: 1;
   position: fixed;
   top: 0;
